# cookiecutter-python-base

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
{{cookiecutter.repo_name}}/app/api/: main.py
{{cookiecutter.repo_name}}/app/api/common/: __init__.py  contracts.py  dependencies.py  endpoints.py  error_handlers.py  event_handlers.py  middleware.py  settings.py
{{cookiecutter.repo_name}}/settings/: README.md  docker.env
{{cookiecutter.repo_name}}/tests/: test_app.py
