[tool.poetry]
name = "cookiecutter-python-base"
version = "0.0.1"
description = "Simple Cookiecutter for general-purpose Python3.9 project"
authors = ["Ilya Katun <katun.ilya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
