[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
case-converter = "^1.1.0"
dependency-injector = "^4.40.0"
toolz = "^0.12.0"

[tool.poetry.group.dev.dependencies]
yastyleguide = "0.1.0"
pre-commit = "^2.19.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://raw.githubusercontent.com/levkovalenko/yastyleguide/master/styles/nitpick-yastyle.toml"
